# cs466_s24

./: README.md
lab1/: CMakeLists.txt  lab1.c  millerLab1BuildOutput.txt
lab2/: CMakeLists.txt  CMakeLists.txt.s23  FreeRTOSConfig.h  kermACM0  kermit  lab2.c
lab3/: .gdbinit  myAssert.c  myAssert.h
lab4/: mGpio.c  mGpio.h  mSpi.c  mSpi.h
lab6/: AlternateDecoder.txt
lab7/: motor.c  motor.h  pwm.c  pwm.h
